<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <Button
        android:id="@+id/main_button_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_order"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="24dp"
        android:drawableTop="@drawable/ic_baseline_shopping_basket"
        android:background="@drawable/button_background_outline_only"
        android:textColor="@color/dark_gray"
        android:onClick="redirectToMyOrderActivity"
        />

    <TextView
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Balance: "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_button_my_order"
        app:layout_constraintTop_toTopOf="@id/main_button_my_order"
        app:layout_constraintBottom_toBottomOf="@id/main_button_my_order"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textColor="@color/dark_orange"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/main_button_my_order"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:drawable/editbox_background"
        android:paddingHorizontal="7dp"
        android:paddingVertical="10dp">
        <TextView
            android:id="@+id/main_text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hungry"
            android:textSize="20sp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drinks"
                android:textColor="@color/white"
                android:background="@drawable/button_background135"
                android:paddingVertical="40dp"
                android:layout_marginHorizontal="5dp"
                android:textSize="20sp"
                android:onClick="redirectToDrinkActivity"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/snacks"
                android:textColor="@color/white"
                android:background="@drawable/button_background90"
                android:paddingVertical="40dp"
                android:layout_marginHorizontal="5dp"
                android:textSize="20sp"
                android:onClick="redirectToSnacksActivity"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foods"
                android:textColor="@color/white"
                android:background="@drawable/button_background45"
                android:paddingVertical="40dp"
                android:layout_marginHorizontal="5dp"
                android:textSize="20sp"
                android:onClick="redirectToFoodsActivity"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/top_up"
                android:textColor="@color/white"
                android:background="@drawable/button_background225"
                android:paddingVertical="40dp"
                android:layout_marginHorizontal="5dp"
                android:textSize="20sp"
                android:onClick="redirectToTopUpActivity"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>