<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:padding="20dp">

    <Button
        android:id="@+id/order_button_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_order"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="24dp"
        android:drawableTop="@drawable/ic_baseline_shopping_basket"
        android:background="@drawable/button_background_outline_only"
        android:textColor="@color/dark_gray"
        android:onClick="redirectToMyOrderActivity"
        />
    <LinearLayout
        android:id="@+id/order_linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/order_button_my_order"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:background="@android:drawable/editbox_background"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/order_text_view_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Item Name Item Name Item Name Item Name Item Name Item Name Item Name Item Name Item Name Item Name"
                />
            <TextView
                android:id="@+id/order_text_view_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp XXX"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=": "
                />
            <EditText
                android:id="@+id/order_edit_text_item_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background90"
        android:text="@string/order_more"
        android:textColor="@color/white"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/order_linear_layout1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="20dp"
        android:onClick="redirectToPreviousActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>